--- a/src/components/Schedule.css
+++ b/src/components/Schedule.css
@@ -15,6 +15,14 @@
   margin-bottom: 4.6rem;
 }
 
+.schedule__day {
+  margin-bottom: 6rem;
+}
+
+.schedule__day:last-child {
+  margin-bottom: 0;
+}
+
 .schedule__layout {
   display: grid;
   grid-template-columns: minmax(140px, 220px) 1fr;
@@ -213,7 +221,7 @@
 .scheduleSpeakerLine {
   color: var(--schedule-card-text);
   background-color: #333F48;
-  background-image: url('../image/back.png');
+  background-image: url('../image/back.webp');
   background-position: 28% -10%;
   background-repeat: no-repeat;
   background-size: 40rem 40rem;
@@ -259,7 +267,7 @@
 .scheduleSpeakerCard {
   color: var(--schedule-card-text);
   background-color: #333F48;
-  background-image: url('../image/back.png');
+  background-image: url('../image/back.webp');
   background-position: 28% -10%;
   background-repeat: no-repeat;
   background-size: 40rem 40rem;
