--- a/src/components/Schedule.css
+++ b/src/components/Schedule.css
@@ -1,5 +1,5 @@
 .schedule {
-  padding: 8rem 0;
+  padding: 8rem 0 0;
   background: #fff;
 }
 
@@ -11,6 +11,14 @@
 
 .schedule__title {
   font-size: 4.375rem;
+  line-height: 1;
+  margin: 0;
+}
+
+.schedule__tittle_desc {
+  font-family: 'Rooftop Mono', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
+  font-size: 2rem;
+  color: #000;
   line-height: 1;
   margin-bottom: 4.6rem;
 }
@@ -407,7 +415,7 @@
 
 @media (max-width: 768px) {
   .schedule {
-    padding: clamp(2rem, 5vw, 4rem) 0;
+    padding: clamp(2rem, 5vw, 4rem) 0 0;
   }
 
   .schedule__title {
@@ -425,6 +433,10 @@
   }
 
   .schedule__date {
+    font-size: clamp(1rem, 1.5rem, 3rem);
+  }
+
+  .schedule__tittle_desc {
     font-size: clamp(1rem, 1.5rem, 3rem);
   }
 
