--- a/src/components/Logistics.css
+++ b/src/components/Logistics.css
@@ -120,7 +120,7 @@
 }
 
 .logistics__media--photo {
-    background-image: url('../image/hotel_hilton.webp');
+    background-image: url('../image/Repino.webp');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
